# pyqmd

./: .gitignore  BACKLOG.md  README.md  justfile  mkdocs.yml  pyproject.toml  release-please-config.json  renovate.json
.github/workflows/: ci.yml  docs.yml  pr-title-lint.yml  release.yml  renovate.yml
docs/: IMPLEMENTATION.md  VISION.md  api.md  architecture.md  cli.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: collections.md  configuration.md  graphrag.md  indexing.md  searching.md
docs/research/: advanced-retrieval-techniques.md  python-ecosystem.md  qmd-architecture.md
docs/stylesheets/: iris.css
docs/superpowers/plans/: 2026-04-01-pyqmd-tier1.md  2026-04-05-pepper-foundation.md
docs/superpowers/specs/: 2026-04-01-pyqmd-design.md  2026-04-05-pepper-foundation-design.md
src/pyqmd/: __init__.py  cli.py  config.py  core.py  models.py  progress.py  watch.py
src/pyqmd/chunking/: __init__.py  frontmatter.py  markdown.py  scoring.py
src/pyqmd/embeddings/: __init__.py  base.py  sentence_transformers.py
src/pyqmd/graph/: __init__.py  engine.py
src/pyqmd/indexing/: __init__.py  contextual.py  hasher.py  pipeline.py
src/pyqmd/retrieval/: __init__.py  fusion.py  hyde.py  parent.py  pipeline.py  rerank.py
src/pyqmd/storage/: __init__.py  base.py  lancedb_backend.py
tests/: conftest.py  test_chunking.py  test_cli.py  test_config.py  test_core.py  test_embeddings.py  test_frontmatter.py  test_fusion.py  test_hasher.py  test_indexing.py  test_models.py  test_parent.py  test_rerank.py  test_retrieval.py  test_scoring.py  test_storage.py  test_watch.py
tests/fixtures/sample_markdown/: large.md  nested_headings.md  simple.md  with_code.md  with_frontmatter.md
