[project]
name = "pyqmd"
version = "0.1.0"
description = "Python-native local search engine for markdown files. Hybrid BM25 + vector search with reranking."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "lancedb>=0.6.0",
    "sentence-transformers>=2.2.0",
    "markdown-it-py>=3.0.0",
    "pyyaml>=6.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-tmp-files>=0.0.2",
]

[project.scripts]
qmd = "pyqmd.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyqmd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.6",
    "pytest>=9.0.2",
    "pytest-tmp-files>=0.0.2",
]
