[project]
name = "pyqmd"
version = "0.1.0"
description = "Python-native local search engine for markdown files. Hybrid BM25 + vector search with reranking."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "lancedb>=0.6.0",
    "sentence-transformers>=2.2.0",
    "markdown-it-py>=3.0.0",
    "pyyaml>=6.0",
    "pyarrow>=14.0.0",
    "nano-graphrag>=0.0.8.2",
    "pydantic>=2.0",
    "tomli-w>=1.0.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-tmp-files>=0.0.2",
]

[project.scripts]
qmd = "pyqmd.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyqmd"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "I", "UP", "B", "RUF100"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=pyqmd --cov-report=xml --cov-report=term-missing"

[dependency-groups]
dev = [
    "diff-cover>=9.0.0",
    "mkdocs-material>=9.7.6",
    "mypy>=1.10.0",
    "pytest>=9.0.2",
    "pytest-cov>=5.0.0",
    "pytest-tmp-files>=0.0.2",
    "ruff>=0.4.0",
]
